# smoothline

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.ko.md  README.md  install.cmd  install.ps1  install.sh  pyproject.toml  statusline-command.ps1  statusline.cmd  statusline.py
.github/workflows/: publish.yml
