[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothline"
version = "0.1.0"
description = "Smooth, gradient statusline for Claude Code — context window + Pro/Max 5h/7d rate-limit bars"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { email = "youja2005@naver.com" },
]
keywords = [
    "claude-code",
    "claude",
    "anthropic",
    "statusline",
    "cli",
    "terminal",
    "ansi",
    "truecolor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/youja2014/smoothline"
Repository = "https://github.com/youja2014/smoothline"
Issues = "https://github.com/youja2014/smoothline/issues"

[project.scripts]
smoothline = "statusline:main"

[tool.setuptools]
py-modules = ["statusline"]
